--- a/src/SFA.DAS.EmployerDemand.Jobs.UnitTests/SFA.DAS.EmployerDemand.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.EmployerDemand.Jobs.UnitTests/SFA.DAS.EmployerDemand.Jobs.UnitTests.csproj
@@ -7,9 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NUnit" Version="3.12.0"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
+        <PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="Moq" Version="4.16.1" />
+        <PackageReference Include="NUnit" Version="3.12.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SFA.DAS.EmployerDemand.Jobs\SFA.DAS.EmployerDemand.Jobs.csproj" />
     </ItemGroup>
 
 </Project>
