--- a/src/SFA.DAS.EmployerDemand.Jobs.UnitTests/SFA.DAS.EmployerDemand.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.EmployerDemand.Jobs.UnitTests/SFA.DAS.EmployerDemand.Jobs.UnitTests.csproj
@@ -13,6 +13,8 @@
         <PackageReference Include="NUnit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="3.0.106" />
+        <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
     </ItemGroup>
 
     <ItemGroup>
