--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -31,6 +31,7 @@ jobs:
             ApimName: $(SharedApimName)
             SubscriptionId: $(FunctionAppName)
             PipelineVariableName: EmployerDemandJobsApimSubscriptionKey
+            IsMultiRepoCheckout: true
         - template: azure-pipelines-templates/deploy/step/generate-config.yml@das-platform-building-blocks
           parameters:
             ServiceConnection: ${{ parameters.ServiceConnection }}
