--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -4,18 +4,14 @@ parameters:
 jobs:
 - job: CodeBuild
   pool:
-    name: DAS - Continuous Integration
+    name: DAS - Continuous Integration Agents
+    demands: LATEST_DOTNET_VERSION -equals 3.1
   variables:
   - group: BUILD Management Resources
   workspace:
     clean: all
   steps:
-  - task: UseGitVersion@5
-    displayName: GitVersion
-    inputs:
-      versionSpec: 5.x
-      useConfigFile: true
-      configFilePath: GitVersion.yml
+  - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
 
   - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
     parameters:
